# stpl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude-plugin/: marketplace.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/skills/setup-stpl/: SKILL.md
claude-plugin/skills/stpl/: SKILL.md
src/: cli.rs  config.rs  editor.rs  error.rs  main.rs  memo.rs  output.rs  resolve.rs  store.rs
src/commands/: append.rs  del.rs  edit.rs  expand.rs  init.rs  mod.rs  new.rs  overview.rs  path.rs  rename.rs  search.rs  show.rs  sync.rs  tag.rs  tags.rs  untag.rs  util.rs
