[package]
name = "stpl"
version = "0.2.2"
edition = "2021"
description = "staple — quick creation and management of markdown notes/memos"
license = "MIT"
repository = "https://github.com/kloki/stpl"

[[bin]]
name = "stpl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "std",
  "serde",
] }
dirs = "5"
fuzzy-matcher = "0.3"
anstream = "0.6"
anstyle = "1"
walkdir = "2"
anyhow = "1"
thiserror = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
